<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_15"
        android:elevation="@dimen/dp_5"
        app:cardCornerRadius="@dimen/dp_12">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlNotificationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tvNotificationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/notification_title"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivOrderDetailsStatus"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo"
                    android:padding="@dimen/dp_15"
                    android:rotation="180"
                    android:src="@drawable/iosback"
                    android:tint="@color/colorGrey"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/colorGreyLight" />


            <RelativeLayout
                android:id="@+id/rlNotificationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tvAssignedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/colorGreyLight" />

            <TextView
                android:id="@+id/tvNotificationDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_details"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>