<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cart_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_5"
        android:elevation="@dimen/dp_15"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">

            <RelativeLayout
                android:id="@+id/rl_feedback_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvFeedbackDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/date"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/order_details"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo"
                    android:padding="@dimen/dp_15"
                    android:rotation="180"
                    android:src="@drawable/iosback"
                    android:tint="@color/colorGrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </RelativeLayout>

            <View
                android:id="@+id/v_feedback"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rl_feedback_date"
                android:layout_marginTop="-5dp"
                android:background="@color/colorGreyLight" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_feedback"
                android:layout_marginTop="@dimen/dp_10">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivCustImage"
                    android:layout_width="@dimen/dp_70"
                    android:layout_height="@dimen/dp_70"
                    android:layout_gravity="center"
                    android:src="@drawable/user" />

                <!--            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/ivCustImage"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:paddingLeft="@dimen/dp_10"
                                android:layout_marginTop="@dimen/dp_15"
                                android:layout_below="@+id/rl_feedback_date"
                                android:layout_centerVertical="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/user" />-->

                <LinearLayout
                    android:id="@+id/ll_service_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_toRightOf="@+id/ivCustImage"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_service_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvUserName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/first_name"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-60dp"
                        android:layout_marginTop="-15dp"
                        android:layout_marginBottom="-15dp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:progressTint="@color/colorGolden"
                        android:scaleX=".5"
                        android:scaleY=".5" />

                    <TextView
                        android:id="@+id/tvReview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_address" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tv_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_type"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_service_price_amnt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:text="@string/order_price"
                            android:textColor="@color/colorBlue" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>