<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/rl_journey_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/journey_alpha"
        >

        <include
            android:id="@+id/common_tool_bar"
            layout="@layout/common_toolbar_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_journey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_70"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnComplete"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_30"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/dp_70"
                    android:background="@drawable/journey_green"
                    android:text="@string/complete"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <com.seasia.driverapp.utils.journey.MyJourney4
                    android:id="@+id/j_complete"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal" />


                <Button
                    android:id="@+id/btnReached"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:background="@drawable/journey_green"
                    android:text="@string/reached"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <com.seasia.driverapp.utils.journey.MyJourney3
                    android:id="@+id/j_reached"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:id="@+id/btnOnTheWay"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_30"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/dp_80"
                    android:background="@drawable/journey_green"
                    android:text="@string/on_the_way"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <com.seasia.driverapp.utils.journey.MyJourney2
                    android:id="@+id/j_onTheWay"
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:background="@drawable/journey_green"
                    android:text="@string/start"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <com.seasia.driverapp.utils.journey.MyJourney1
                    android:id="@+id/j_start"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </ScrollView>

        <!--       <com.seasia.driverapp.utils.journey.MyJouneyAnimation
                   android:id="@+id/j_animation"
                   android:layout_width="200dp"
                   android:layout_height="150dp"
                   android:layout_gravity="center_horizontal" />-->
    </RelativeLayout>
</layout>