<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_40"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llDriverDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_25"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvNameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver_name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_overall_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/overall_rating"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver_name"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        android:layout_marginBottom="-10dp"
                        android:numStars="5"
                        android:progressTint="@color/colorGolden"
                        android:scaleX=".5"
                        android:scaleY=".5" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tvTotalOrders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvTotalFeedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvCommentTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/driver_comment"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/driver_comment" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_no_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_150"
            android:text="@string/no_record_found"
            android:visibility="visible" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_customer_feedback">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_rate_listing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llDriverDetails"
                android:paddingBottom="@dimen/dp_5" />

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_rate_listing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/round_back_blue"
            android:text="@string/continues"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>
</layout>